# aidobe

./: .dev.vars.example  .env.example  .eslintrc.json  .gitignore  CLAUDE.md  IMPLEMENTATION.md  README.md  TODOS.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
.husky/: pre-commit
config/prompt-templates/: tech-in-asia-script.json
docs/: API_ENDPOINT_PLAN.md  FOCUSED_API_PLAN.md  TESTING.md  api-architecture-summary.md  api-endpoint-plan.md  implementation-roadmap.md  workflow-data-flow.md
migrations/: 0001_initial_schema.sql
modal_video_processor/: .coverage  pyproject.toml  requirements.txt
modal_video_processor/aidobe_video_processor/: __init__.py  audio_duration.py  audio_master_sync.py  modal_webhook.py  scene_gap_validator.py  scene_timing.py  video_assembler.py
modal_video_processor/tests/: test_audio_duration.py  test_audio_duration_simple.py  test_audio_master_sync.py  test_modal_webhook_integration.py  test_scene_gap_validator.py  test_scene_timing.py  test_video_assembler.py  test_video_assembler_simple.py
public/: index-simple.html  index.html  video.html
scripts/: README.md  fetch-argil-config.ts  schema.sql  store-templates.ts  sync-argil-config.ts
src/: index.ts
src/config/: argil-config.ts  argil.yaml
src/examples/: tracing-example.ts
src/handlers/: argil.ts  articles.ts  asset-pipeline.ts  assets.ts  audio.ts  download.ts  image.ts  jobs.ts  media.ts  prompt.ts  scripts.ts  video-webhooks.ts  video.ts
src/middleware/: auth.ts  error.ts
src/schemas/: asset.ts  audio.ts  config.ts  job.ts  (+4 more)
(+44 files in other folders)
