[project]
name = "aidobe-video-processor"
version = "0.1.0"
description = "Modal-based video processing backend for aidobe AI video generation"
requires-python = ">=3.10"
dependencies = [
    "modal>=0.55.0",
    "moviepy>=1.0.3",
    "librosa>=0.10.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=aidobe_video_processor",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-fail-under=85",
]